<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My application Kotlin</string>

    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="profile">Profile</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="change_lang">Change Language</string>
    <string name="sign_out">Sign Out</string>

    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="your_welcome">Your Welcome</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="passwords_is_not_equal">Passwords not equal</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>

    <string name="delete">Delete</string>
    <string name="more_info">More Info</string>
</resources>